--- a/assets/css/normailze.css
+++ b/assets/css/normailze.css
@@ -1,3 +1,26 @@
 html{
   color: red !important;
 }
+
+
+/*
+  配置全局动画
+*/
+/*渐隐渐显*/
+.page-enter-active, page-leave-active{
+  transition: opacity 2s;
+}
+.page-enter , .page-leave-active {
+  opacity: 0;
+}
+
+
+/*过度效果*/
+.test-enter-active, test-leave-active{
+  transition: all 2s;
+  font-size: 12px;
+}
+.test-enter , .test-leave-active {
+  opacity: 0;
+  font-size: 40px;
+}
